<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.exercise_3.StartGameFragment">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_calcul"
                android:layout_width="0dp"
                android:layout_height="270dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:cropToPadding="false"
                android:src="@drawable/calcul"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/start_game"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/image_calcul"
                app:layout_constraintVertical_chainStyle="packed"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:tag="addition"
                android:text="@string/addition"
                app:layout_constraintBottom_toTopOf="@+id/subtraction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_game" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:tag="subtraction"
                android:text="@string/subtraction"
                app:layout_constraintBottom_toTopOf="@+id/multiplication"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addition" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:tag="multiplication"
                android:text="@string/multiplication"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtraction" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>